# data_ingestion

./: .env  README.md  app.py  docker-compose.yml  makefile  pyproject.toml  users.xml
data_pipeline/: api.py  clickhouse_client.py  data_processing.py
sql/: create_view.sql
tests/: api_test.py  clickhouse_client_test.py  data_processing_test.py  minio_client_test.py
